syntax = "proto3";

package raft;

option go_package = "github.com/EddieJ03/223b-raft;proto";

service Raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

message AppendEntriesRequest {
    int32 term = 1;
    int32 leader_id = 2;
    int32 prev_log_index = 3;
    int32 prev_log_term = 4;
    repeated Entry entries = 5;
    int32 leader_commit = 6;
}

message Entry {
    int32 term = 1;
    int32 op = 2;
    string key = 3;
    string value = 4;
    int32 index = 5; 
}

message AppendEntriesResponse {
    int32 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
  int32 term = 1;
  int32 candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}

message InstallSnapshotRequest {
  int32 term = 1;
  int32 leader_id = 2;
  int32 last_included_index = 3;
  int32 last_included_term = 4;
  map<string, string> data = 5;
}

message InstallSnapshotResponse {
  int32 term = 1;
}